--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,4 +1,4 @@
-@import 'nav.css';
+@import '/AnchorWebsite/public/css/nav.css';
 .hero-section{
     width: 100%;
     height: calc(100vh - 120px);
